Fix image effect cache keys